fix: Remove max-width for content
The width for the model description was too small.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -189,7 +189,6 @@ fieldset > :not(.field-separator) {
 }
 
 .content {
-  max-width: 20ch;
   max-height: 5rem;
   margin: auto;
 }
